solved a couple of issues with connections and switched to using virtual threads